--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Android Programming</string>
+    <string name="course_description">Intermediate course introducing Android Programming principles using Android Studio and Java language. Recommend to learners with previous experience.</string>
     <string name="home">Home</string>
 </resources>
