--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Android Programming</string>
     <string name="course_description">Intermediate course introducing Android Programming principles using Android Studio and Java language. Recommend to learners with previous experience.</string>
     <string name="home">Home</string>
+    <string name="login">Login</string>
+    <string name="sign_in">Sign-in</string>
+    <string name="surname">Surname</string>
+    <string name="name">Name</string>
+    <string name="profile">Profile</string>
 </resources>
