--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="surname">Surname</string>
     <string name="name">Name</string>
     <string name="profile">Profile</string>
+    <string name="github_repository">GitHub repository</string>
 </resources>
