--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="name">Name</string>
     <string name="profile">Profile</string>
     <string name="github_repository">GitHub repository</string>
+    <string name="url_github_repo">https://github.com/kevinmala00/Android-Programming</string>
 </resources>
